Fixed visibility

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -42,8 +42,8 @@
 
 
 
-.header,
-main > *:not(:last-child),
-.footer {
-    display: none !important;
-}
+// .header,
+// main > *:not(:last-child),
+// .footer {
+//     display: none !important;
+// }
